inst/www/css/styles.css
/* ... */
/* DT dataTable */
table.dataTable tbody tr.selected>* {
    box-shadow: inset 0 0 0 9999px #4AA2B1 !important;
    color: white;
}
table.dataTable.stripe>tbody>tr.odd.selected>*, table.dataTable.display>tbody>tr.odd.selected>* {
    box-shadow: inset 0 0 0 9999px #4AA2B1 !important;
}
table.dataTable.hover>tbody>tr.selected:hover>*, table.dataTable.display>tbody>tr.selected:hover>* {
    box-shadow: inset 0 0 0 9999px #086A87 !important;
}

.btn-box-tool {
    font-size: 18px;
}

/* Unique bullet (less indentation) */
ul.b {
  padding-left: 0.5em;
}

ul.menu > div {
  width: 100%
}

ul.menu #nested-div {
  width: 100%
}


/* navlistPanel (using success color) */
.nav-stacked>li.active>a, .nav-stacked>li.active>a{
    background: 0 0;
    color: #444;
    border-top: 0;
    border-left-color: #007319;
    background-color: #007319;
}
.nav-stacked>li.active>a, .nav-stacked>li.active>a:focus, .nav-stacked>li.active>a, .nav-stacked>li.active>a:hover {
    background: 0 0;
    color: white;
    border-top: 0;
    border-left-color: #007319;
    background-color: #007319;
    background-color: rgba(0, 115, 25, 0.5);
}
.navbar-brand{
  font-size:24px;
  color: #007319;
}


/* wellPanel */
.well {
  padding:10px 5px 10px 5px;
}

/* sliderInput (using primary and info colors) */
.irs--shiny .irs-bar {
    top: 25px;
    height: 8px;
    border-top: 1px solid #086A87;
    border-bottom: 1px solid #086A87;
    background: #4AA2B1;
}
.irs--shiny .irs-from, .irs--shiny .irs-to, .irs--shiny .irs-single {
    color: #fff;
    text-shadow: none;
    padding: 1px 3px;
    background-color: #086A87;
    border-radius: 5px;
    font-size: 11px;
    line-height: 1.333;
}


/* Regular shiny radiobutton*/
/* Special case that is native to each OS/browser, normally cant change this color, */
/* but here we will remove the old one, and make a new one. */
/* Use primary filling with info border. Increase size and adjust margin.*/
label > input[type="radio"] {
  display: none;
}

label > input[type="radio"] + *::before {
  content: '';
  margin: 2px 0 0;
  width: 16px;
  height: 16px;
  position: absolute;
  margin-left: -24px;
  border-radius: 50%;
  border-style: solid;
  border-width: 0.1rem;
  border-color: #086A87;
}
label > input[type="radio"]:checked + *::before {
  background: radial-gradient(#086A87 0%, #086A87 40%, transparent 50%, transparent);
  border-color: #4AA2B1;
}
/* radiobutton checked font color*/
label > input[type="radio"]:checked + * {
  color: black;
}


/* Regular shiny checkbox*/
/* Remove the old one, and make a new one */
/* Use primary filling. Adjust size and adjust margin.*/
label > input[type='checkbox'] {
  opacity: 0;
  position: absolute;
}
label > input[type='checkbox'] + *::before {
  content: '';
  position: absolute;
  margin: 4px 0 0;
  margin-left: -20px;
  width: 16px;
  height: 16px;
  margin-right: 1rem;
  border-radius: 0.1em;
  border-style: solid;
  border-width: 0.1rem;
  border-color: #086A87;
}
label > input[type='checkbox']:checked + *::before {
  content: '';
  width: 14px;
  height: 14px;
  background-color: #086A87;
}
label > input[type='checkbox']:checked + *::after {
   content: '';
   position: absolute;
   margin: 4px 0 0;
   margin-left: 0px;
   width: 1.2ex;
   height: 0.4ex;
   top: 0.5ex;
   left: 0.3ex;
   border: 3px solid white;
   border-top: none;
   border-right: none;
   -webkit-box-sizing: content-box;
   -webkit-transform: rotate(-45deg);
   -moz-transform: rotate(-45deg);
   -o-transform: rotate(-45deg);
   -ms-transform: rotate(-45deg);
   transform: rotate(-45deg);
}


/* For bslib::navset_card_pill */
/* Default color */
.nav-pills > li > a {
    border-top: 3px solid transparent;
    color: white;
    padding: 10px 15px 10px 15px;
}
/* Hovering */
.nav>li>a:active, .nav>li>a:focus, .nav>li>a:hover {
    color: white;
    background: #086A87;
}
/* Selected tab */
.nav-pills > li.active > a, .nav-pills > li.active > a:focus, .nav-pills > li.active > a:hover {
    border-top-color: #086A87;
    color: white;
    background-color: #252525;
}
/* menu dropdown when clicked*/
.nav .open>a, .nav .open>a:focus, .nav .open>a:hover {
    background-color: #086A87;
    border-color: #086A87;
}


/* For bslib::navset_tab*/
/* Default color */
.nav-tabs > li > a {
    border-top: 3px solid transparent;
    color: lightslategrey;
    padding: 5px 15px;
}
/* Selected tab */
.nav-tabs > li.active > a, .nav-tabs > li.active > a:focus, .nav-tabs > li.active > a:hover {
    color: white;
    background-color: #086A87;
    border-color: rgb(221, 221, 221) rgb(221, 221, 221) transparent;
}


/* Misc */
.shiny-input-container:not(.shiny-input-container-inline) {
    width: revert;
}

/* Folder paths */
.folder-path {
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  font-size: 18px;
  color: #086A87;
  background-color: #f9f9f9; /* Light gray background color */
  padding: 10px 15px;
  border: 2px solid #086A87;
  border-radius: 10px; /* Rounded corners */
  display: inline-block;
  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2); /* Shadow effect */
  text-decoration: none; /* Remove underlines if used as a link */
  transition: background-color 0.3s, color 0.3s;
}

.folder-path-small {
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  font-size: 14px;
  color: #086A87;
  background-color: #f9f9f9;
  padding: 1px 5px 1px 5px;
  border: 2px solid #086A87;
  border-radius: 10px;
  display: inline-block;
  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
  text-decoration: none;
  transition: background-color 0.3s, color 0.3s;
}

.folder-path:hover, .folder-path-small:hover {
  background-color: #086A87;
  color: #fff;
  text-decoration: none;
}

/* shinyWidgets Dropdown */
.sw-dropdown-in {
    padding: 10px 25px;
    margin: 0px;
    background-color: black;
    border-radius: 10px;
}

/* Shadow wrapper */
.shadow-wrapper {
    box-shadow: inset 0px 50px 70px 2px #000000;
    color: white;
    background-color: #086A87;
}
/* ... */

